# CatSentinel

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
models/: .gitkeep
src/catsentinel/: __init__.py  main.py
src/catsentinel/benchmarking/: __init__.py  decorators.py  metrics.py
src/catsentinel/capture/: __init__.py  video_source.py
src/catsentinel/detection/: __init__.py  processor.py
src/catsentinel/engines/: __init__.py  base.py  rfdetr_engine.py  yolov11_engine.py  yolov26_engine.py
src/catsentinel/notifications/: __init__.py  base.py  telegram.py  webhook.py
src/catsentinel/utils/: __init__.py  config.py
tests/: __init__.py
